feat: add /token/get-coinbase-amounts endpoint
