# src/types/token.ts
@@ -1,4 +1,14 @@
 
+export interface CoinbaseAmounts {
+  coinbaseAmount1: number,
+  coinbaseAmount2: number,
+  coinbaseAmount3: number,
+  coinbaseAmount4: number,
+  coinbaseAmount5: number,
+  coinbaseAmountBonus: number,
+  coinbaseAmountDefault: number,
+}
+
 export interface CoinbaseThresholds {
   coinbaseThreshold1: number,
   coinbaseThreshold2: number,
